--- a/Dockerfile-spack-mofem
+++ b/Dockerfile-spack-mofem
@@ -5,10 +5,11 @@ LABEL maintainer="Lukasz.Kaczmarczyk@glasgow.ac.uk,Andrei.Shvarts@glasgow.ac.uk"
 ENV MOFEM_BRANCH=develop
 
 RUN cd $MOFEM_INSTALL_DIR/ && \
-  git clone -b lukasz/nested_schur https://bitbucket.org/mofem/mofem-cephas.git && \
-  git clone -b andrei/cantilever https://bitbucket.org/mofem/users-modules-cephas.git mofem-cephas/mofem/users_modules && \
+  git clone -b develop https://bitbucket.org/mofem/mofem-cephas.git && \
+  git clone -b develop https://bitbucket.org/mofem/users-modules-cephas.git mofem-cephas/mofem/users_modules && \
   git clone -b lukasz/nested_schur https://bitbucket.org/mofem/um_eshelbian_plasticity.git mofem-cephas/mofem/users_modules/eshelbian_plasticity && \
-  git clone -b develop https://bitbucket.org/mofem/mfront_interface.git mofem-cephas/mofem/users_modules/mfront_interface
+  git clone -b develop https://bitbucket.org/mofem/mfront_interface.git mofem-cephas/mofem/users_modules/mfront_interface && \
+  git clone -b develop https://bitbucket.org/mofem/adolc-plasticity.git mofem-cephas/mofem/users_modules/adolc-plasticity
 
 ENV MOFEM_ENV_FILE=/etc/profile.d/mofem.sh
 
