--- a/mofem/tutorials/scl-1/CMakeLists.txt
+++ b/mofem/tutorials/scl-1/CMakeLists.txt
@@ -16,6 +16,7 @@ tutorials_copy_and_install("*.h5m" "${permissions_default}")
 tutorials_copy_and_install("*.petsc" "${permissions_default}")
 tutorials_copy_and_install("*.sh" "${permissions_execute}")
 tutorials_copy_and_install("*.md" "${permissions_default}")
+tutorials_copy_and_install("*.cub" "${permissions_default}")
 
 tutorials_build_and_install(
   poisson_2d_homogeneous ${CMAKE_CURRENT_SOURCE_DIR}/poisson_2d_homogeneous.cpp)
@@ -28,3 +29,10 @@ tutorials_build_and_install(
 set_target_properties(
   poisson_3d_homogeneous PROPERTIES COMPILE_FLAGS 
   "-DEXECUTABLE_DIMENSION=3")
+
+  add_test(
+    poisson_2d_homo ${MPI_RUN} ${MPI_RUN_FLAGS} -np 2 ${CMAKE_CURRENT_BINARY_DIR}/poisson_2d_homogeneous
+    -file_name ${CMAKE_CURRENT_SOURCE_DIR}/square_2parts.h5m 
+    -order 2
+    -atom_test 1
+  )
