copy tutorials and tools

--- a/mofem/CMakeLists.txt
+++ b/mofem/CMakeLists.txt
@@ -311,7 +311,8 @@ add_subdirectory(${PROJECT_SOURCE_DIR}/cmake)
 add_subdirectory(${PROJECT_SOURCE_DIR}/scripts)
 add_subdirectory(${PROJECT_SOURCE_DIR}/third_party)
 add_subdirectory(${PROJECT_SOURCE_DIR}/src)
-add_subdirectory(${PROJECT_SOURCE_DIR}/users_modules.in)
+add_subdirectory(${PROJECT_SOURCE_DIR}/tools)
+add_subdirectory(${PROJECT_SOURCE_DIR}/tutorials)
 add_subdirectory(${PROJECT_SOURCE_DIR}/doc)
 if(MOFEM_BUILD_TESTS)
   add_subdirectory(${PROJECT_SOURCE_DIR}/atom_tests)
