--- a/mofem/include/CMakeLists.txt
+++ b/mofem/include/CMakeLists.txt
@@ -9,6 +9,8 @@ include_directories(${PROJECT_SOURCE_DIR}/src/petsc)
 include_directories(${PROJECT_SOURCE_DIR}/src/finite_elements)
 include_directories(${PROJECT_SOURCE_DIR}/src/post_proc)
 include_directories(${PROJECT_SOURCE_DIR}/src/boundary_conditions)
+include_directories(${PROJECT_SOURCE_DIR}/tools)
+include_directories(${PROJECT_SOURCE_DIR}/tutorials)
 
 # Configure a header file to pass some of the CMake settings to the source code
 configure_file(
