--- a/mofem/tutorials/cor-7/CMakeLists.txt
+++ b/mofem/tutorials/cor-7/CMakeLists.txt
@@ -26,13 +26,13 @@ tutorials_copy_and_install("*.sh" "${permissions_execute}")
 tutorials_copy_and_install("*.geo" "${permissions_execute}")
 tutorials_copy_and_install("README" "${permissions_execute}")
 
-tutorials_build_and_install(elasticity_mixed_formulation
-    ${CMAKE_CURRENT_SOURCE_DIR}/elasticity_mixed_formulation.cpp)
+# tutorials_build_and_install(elasticity_mixed_formulation
+#     ${CMAKE_CURRENT_SOURCE_DIR}/elasticity_mixed_formulation.cpp)
 
-#testing
-add_test(elasticity_mixed_formulation
-  ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 2 ${CMAKE_CURRENT_BINARY_DIR}/elasticity_mixed_formulation
-  -my_file  ${CMAKE_CURRENT_SOURCE_DIR}/LShape_incompressible.cub
-  -ksp_type gmres -pc_type lu 
-  -pc_factor_mat_solver_type mumps
-  )
+# #testing
+# add_test(elasticity_mixed_formulation
+#   ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 2 ${CMAKE_CURRENT_BINARY_DIR}/elasticity_mixed_formulation
+#   -my_file  ${CMAKE_CURRENT_SOURCE_DIR}/LShape_incompressible.cub
+#   -ksp_type gmres -pc_type lu 
+#   -pc_factor_mat_solver_type mumps
+#   )
