--- a/mofem/tutorials/cor-0to1/run_uf.sh.in
+++ b/mofem/tutorials/cor-0to1/run_uf.sh.in
@@ -54,7 +54,7 @@ fi
 rm -f out_*.h5m 
 #make -j 4 unsaturated_transport 
 
-@MoFEM_MPI_RUN@ \
+@MPI_RUN@ \
 @MPI_RUN_FLAGS@ \
 -np $NBPROCS \
 ./unsaturated_transport \
