--- a/mofem/tutorials/cor-9/CMakeLists.txt
+++ b/mofem/tutorials/cor-9/CMakeLists.txt
@@ -3,7 +3,7 @@ tutorials_build_and_install(
   ${CMAKE_CURRENT_SOURCE_DIR}/reaction_diffusion.cpp)
 
 add_test(reaction_diffusion
-   ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 2 
+   ${MPI_RUN} ${MPI_RUN_FLAGS} -np 2 
    ${CMAKE_CURRENT_BINARY_DIR}/reaction_diffusion
    -file_name mesh_quad_2part.h5m
    -ts_max_time 0.4)
