--- a/mofem/tutorials/fun-0/CMakeLists.txt
+++ b/mofem/tutorials/fun-0/CMakeLists.txt
@@ -17,5 +17,5 @@ tutorials_build_and_install(
   hello_world ${CMAKE_CURRENT_SOURCE_DIR}/hello_world.cpp)
 
 add_test(hello_world
-  ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 1
+  ${MPI_RUN} ${MPI_RUN_FLAGS} -np 1
   ${CMAKE_CURRENT_BINARY_DIR}/hello_world)
