--- a/mofem/tutorials/vec-0/CMakeLists.txt
+++ b/mofem/tutorials/vec-0/CMakeLists.txt
@@ -48,35 +48,35 @@ set_target_properties(
 
 add_test(
   elastic
-  ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 2
+  ${MPI_RUN} ${MPI_RUN_FLAGS} -np 2
   ${CMAKE_CURRENT_BINARY_DIR}/elastic_2d
   -file_name part.h5m -order 4
   -ksp_rtol 1e-12 -ksp_atol 1e-12 -ksp_type fgmres -test -log_no_color)
 
 add_test(
   elastic_mpc_XYZ
-  ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 1
+  ${MPI_RUN} ${MPI_RUN_FLAGS} -np 1
   ${CMAKE_CURRENT_BINARY_DIR}/elastic_2d_petsc
   -file_name LShape_Rot_MPC_link.cub -order 2 
   -ksp_rtol 1e-12 -ksp_atol 1e-12 -test -log_no_color -pc_type lu)
 
 add_test(
   elastic_mpc_master_only
-  ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 1
+  ${MPI_RUN} ${MPI_RUN_FLAGS} -np 1
   ${CMAKE_CURRENT_BINARY_DIR}/elastic_2d_petsc
   -file_name LShape_Rot_MPC_link_master.cub -order 2 
   -ksp_rtol 1e-12 -ksp_atol 1e-12 -test -log_no_color -pc_type lu)
 
 add_test(
   elastic_3d_rotation0
-  ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 1
+  ${MPI_RUN} ${MPI_RUN_FLAGS} -np 1
   ${CMAKE_CURRENT_BINARY_DIR}/elastic_3d
   -file_name LShape_Rot_D0.cub -order 4
   -ksp_rtol 1e-12 -ksp_atol 1e-12 -test -log_no_color)
 
 add_test(
   elastic_3d_rotation_blockset
-  ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 1
+  ${MPI_RUN} ${MPI_RUN_FLAGS} -np 1
   ${CMAKE_CURRENT_BINARY_DIR}/elastic_3d
   -file_name LShape_Rot_D1.cub -order 4
   -fieldsplit_1_pc_type cg -fieldsplit_1_pc_type lu 
@@ -84,7 +84,7 @@ add_test(
 
 add_test(
   elastic_3d_dam_fluid_pressure
-  ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 1
+  ${MPI_RUN} ${MPI_RUN_FLAGS} -np 1
   ${CMAKE_CURRENT_BINARY_DIR}/elastic_3d
   -file_name dam.cub -order 4
   -fieldsplit_1_pc_type cg -fieldsplit_1_pc_type lu 
