--- a/mofem/tutorials/adv-0/CMakeLists.txt
+++ b/mofem/tutorials/adv-0/CMakeLists.txt
@@ -78,7 +78,7 @@ endif(Boost_NUMPY_LIBRARY_RELEASE)
 
 add_test(
   plastic_3d_necking
-  ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 2
+  ${MPI_RUN} ${MPI_RUN_FLAGS} -np 2
   plastic_3d 
   -file_name necking_3D_p2.h5m
   -ts_dt 0.01
@@ -96,7 +96,7 @@ add_test(
 
 add_test(
   plastic_3d_old_necking
-  ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 2
+  ${MPI_RUN} ${MPI_RUN_FLAGS} -np 2
   plastic_old_schur_3d 
   -file_name necking_3D_p2.h5m
   -ts_dt 0.01
@@ -114,7 +114,7 @@ add_test(
 
 add_test(
   plastic_3d_necking_petsc
-  ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 2
+  ${MPI_RUN} ${MPI_RUN_FLAGS} -np 2
   plastic_3d 
   -file_name necking_3D_p2.h5m
   -ts_dt 0.01
