--- a/mofem/tutorials/adv-4/CMakeLists.txt
+++ b/mofem/tutorials/adv-4/CMakeLists.txt
@@ -40,7 +40,7 @@ set_target_properties(
 
 # add_test(
 #   dynamic_first_order_con_law
-#   ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 2
+#   ${MPI_RUN} ${MPI_RUN_FLAGS} -np 2
 #   ${CMAKE_CURRENT_BINARY_DIR}/dynamic_first_order_con_law_2d
 #   -file_name part.h5m -order 1 -ts_max_time 0.3 -ts_dt 0.1 
 #   -time_vector_file body_force.txt -log_no_color -test)
