--- a/mofem/tutorials/clx-0/CMakeLists.txt
+++ b/mofem/tutorials/clx-0/CMakeLists.txt
@@ -24,6 +24,6 @@ tutorials_build_and_install(
 
 add_test(
   helmholtz
-  ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 2
+  ${MPI_RUN} ${MPI_RUN_FLAGS} -np 2
   ${CMAKE_CURRENT_BINARY_DIR}/helmholtz
   -file_name part.h5m  -ksp_monitor -order 4 -k 90 -log_no_color)
