--- a/mofem/tutorials/max-0/CMakeLists.txt
+++ b/mofem/tutorials/max-0/CMakeLists.txt
@@ -4,7 +4,7 @@ tutorials_build_and_install(
   magnetostatic ${CMAKE_CURRENT_SOURCE_DIR}/magnetostatic.cpp)
 
 add_test(magnetostatic
-  ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 2 
+  ${MPI_RUN} ${MPI_RUN_FLAGS} -np 2 
   ${CMAKE_CURRENT_BINARY_DIR}/magnetostatic
   -my_file ${CMAKE_CURRENT_SOURCE_DIR}/magnetic_coil_2parts.h5m -my_order 1 
   -ksp_type fgmres -pc_type lu -pc_factor_mat_solver_type mumps 
