--- a/mofem/tutorials/adv-1/CMakeLists.txt
+++ b/mofem/tutorials/adv-1/CMakeLists.txt
@@ -92,31 +92,31 @@ else (Boost_NUMPY_LIBRARY_RELEASE)
 
 endif(Boost_NUMPY_LIBRARY_RELEASE)
 
-set(IS_MFRONT_MOD false)  
+# set(IS_MFRONT_MOD false)  
 
 # Add mfront interface
-if(MFRONT_INTERFACE_INSTALL_PREFIX)
-  include(${MFRONT_INTERFACE_INSTALL_PREFIX}/mfront_interface/mfront_interface_all_targets.cmake)
-  include_directories(${MFRONT_INTERFACE_INSTALL_PREFIX}/mfront_interface/src)
-  set(IS_MFRONT_MOD true)  
-  else(MFRONT_INTERFACE_INSTALL_PREFIX)
-if(EXISTS ${PROJECT_SOURCE_DIR}/mfront_interface/src)
-  include_directories(${PROJECT_SOURCE_DIR}/mfront_interface/src)
-  set(IS_MFRONT_MOD true)  
-  endif()
-endif(MFRONT_INTERFACE_INSTALL_PREFIX)
+# if(MFRONT_INTERFACE_INSTALL_PREFIX)
+#   include(${MFRONT_INTERFACE_INSTALL_PREFIX}/mfront_interface/mfront_interface_all_targets.cmake)
+#   include_directories(${MFRONT_INTERFACE_INSTALL_PREFIX}/mfront_interface/src)
+#   set(IS_MFRONT_MOD true)  
+#   else(MFRONT_INTERFACE_INSTALL_PREFIX)
+# if(EXISTS ${PROJECT_SOURCE_DIR}/users_modules/mfront_interface/src)
+#   include_directories(${PROJECT_SOURCE_DIR}/users_modules/mfront_interface/src)
+#   set(IS_MFRONT_MOD true)  
+#   endif()
+# endif(MFRONT_INTERFACE_INSTALL_PREFIX)
 
-if(IS_MFRONT_MOD)
-  message("WITH MFRONT")
-  target_link_libraries(contact_2d
-    mfront_lib)
-  target_link_libraries(contact_3d
-    mfront_lib)
-  target_link_libraries(contact_2d_schur
-    mfront_schur_lib)
-  target_link_libraries(contact_3d_schur
-    mfront_schur_lib)
-endif(IS_MFRONT_MOD)
+# if(IS_MFRONT_MOD)
+#   message("WITH MFRONT")
+#   target_link_libraries(contact_2d
+#     mfront_lib)
+#   target_link_libraries(contact_3d
+#     mfront_lib)
+#   target_link_libraries(contact_2d_schur
+#     mfront_schur_lib)
+#   target_link_libraries(contact_3d_schur
+#     mfront_schur_lib)
+# endif(IS_MFRONT_MOD)
 
 # Copy scripts to build a directory
 add_custom_target(
@@ -227,166 +227,162 @@ add_test(
   -atom_test 7
 )
 
-if(IS_MFRONT_MOD)
-  if(TFEL_DIR)
-    message("TFEL DIR FOUND")
+# if(IS_MFRONT_MOD)
+#   if(TFEL_DIR)
+#     message("TFEL DIR FOUND")
 
-    add_test(adv_1_compile_example_behaviour_test
-      ${TFEL_DIR}/bin/mfront --obuild --interface=generic ${PROJECT_SOURCE_DIR}/mfront_interface/behaviours/LinearElasticity.mfront ${PROJECT_SOURCE_DIR}/mfront_interface/behaviours/SignoriniHyperElasticity.mfront)
+#     add_test(adv_1_compile_example_behaviour_test
+#       ${TFEL_DIR}/bin/mfront --obuild --interface=generic ${PROJECT_SOURCE_DIR}/mfront_interface/behaviours/LinearElasticity.mfront ${PROJECT_SOURCE_DIR}/mfront_interface/behaviours/SignoriniHyperElasticity.mfront)
 
-    if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-      target_compile_definitions(mfront_lib PUBLIC DEFAULT_LIB_EXTENSION="dylib")
-      target_compile_definitions(mfront_schur_lib PUBLIC DEFAULT_LIB_EXTENSION="dylib")
-      set(DEFAULT_LIB_EXTENSION "dylib")
-    else()
-      target_compile_definitions(mfront_lib PUBLIC DEFAULT_LIB_EXTENSION="so")
-      target_compile_definitions(mfront_schur_lib PUBLIC DEFAULT_LIB_EXTENSION="so")
-      set(DEFAULT_LIB_EXTENSION "so")
-    endif()
+#     if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+#       set(DEFAULT_LIB_EXTENSION "dylib")
+#     else()
+#       set(DEFAULT_LIB_EXTENSION "so")
+#     endif()
 
-    add_test(
-      wavy_2d_mfront
-      ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
-      contact_2d
-      -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/wavy_2d_4p.h5m
-      -pc_type lu
-      -ts_type beuler
-      -ts_max_time 1 -ts_dt 1
-      -sdf_file ./sdf_files/sdf_plane_2d.py
-      -use_mfront 1
-      -is_axisymmetric 0
-      -mi_lib_path_10 ${CMAKE_CURRENT_BINARY_DIR}/src/libBehaviour.${DEFAULT_LIB_EXTENSION}
-      -mi_block_10 LinearElasticity
-      -mi_param_10_0 1e3
-      -mi_param_10_1 0.4
-      -atom_test 6
-    )
+#     add_test(
+#       wavy_2d_mfront
+#       ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
+#       contact_2d
+#       -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/wavy_2d_4p.h5m
+#       -pc_type lu
+#       -ts_type beuler
+#       -ts_max_time 1 -ts_dt 1
+#       -sdf_file ./sdf_files/sdf_plane_2d.py
+#       -use_mfront 1
+#       -is_axisymmetric 0
+#       -mi_lib_path_10 ${CMAKE_CURRENT_BINARY_DIR}/src/libBehaviour.${DEFAULT_LIB_EXTENSION}
+#       -mi_block_10 LinearElasticity
+#       -mi_param_10_0 1e3
+#       -mi_param_10_1 0.4
+#       -atom_test 6
+#     )
 
-    add_test(
-      hertz_mfront_2d_plane_strain
-      ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
-      contact_2d
-      -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/cyl_2d_4p.h5m
-      -pc_type lu
-      -ts_type beuler
-      -ts_max_time 1 -ts_dt 1
-      -sdf_file ./sdf_files/sdf_hertz_2d_plane.py
-      -use_mfront 1
-      -is_axisymmetric 0
-      -mi_lib_path_10 ${CMAKE_CURRENT_BINARY_DIR}/src/libBehaviour.${DEFAULT_LIB_EXTENSION}
-      -mi_block_10 LinearElasticity
-      -mi_param_10_0 1e3
-      -mi_param_10_1 0.4
-      -atom_test 2
-    )
+#     add_test(
+#       hertz_mfront_2d_plane_strain
+#       ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
+#       contact_2d
+#       -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/cyl_2d_4p.h5m
+#       -pc_type lu
+#       -ts_type beuler
+#       -ts_max_time 1 -ts_dt 1
+#       -sdf_file ./sdf_files/sdf_hertz_2d_plane.py
+#       -use_mfront 1
+#       -is_axisymmetric 0
+#       -mi_lib_path_10 ${CMAKE_CURRENT_BINARY_DIR}/src/libBehaviour.${DEFAULT_LIB_EXTENSION}
+#       -mi_block_10 LinearElasticity
+#       -mi_param_10_0 1e3
+#       -mi_param_10_1 0.4
+#       -atom_test 2
+#     )
 
-    add_test(
-      hertz_mfront_2d_axisymm_flat
-      ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
-      contact_2d
-      -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/hertz_2d_4p.h5m
-      -pc_type lu
-      -ts_type beuler
-      -ts_max_time 1 -ts_dt 1 
-      -sdf_file ./sdf_files/sdf_hertz_2d_axisymm_sphere.py
-      -use_mfront 1
-      -is_axisymmetric 1
-      -mi_lib_path_10 ${CMAKE_CURRENT_BINARY_DIR}/src/libBehaviour.${DEFAULT_LIB_EXTENSION}
-      -mi_block_10 LinearElasticity
-      -mi_param_10_0 1e3
-      -mi_param_10_1 0.4
-      -atom_test 5
-    )
+#     add_test(
+#       hertz_mfront_2d_axisymm_flat
+#       ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
+#       contact_2d
+#       -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/hertz_2d_4p.h5m
+#       -pc_type lu
+#       -ts_type beuler
+#       -ts_max_time 1 -ts_dt 1 
+#       -sdf_file ./sdf_files/sdf_hertz_2d_axisymm_sphere.py
+#       -use_mfront 1
+#       -is_axisymmetric 1
+#       -mi_lib_path_10 ${CMAKE_CURRENT_BINARY_DIR}/src/libBehaviour.${DEFAULT_LIB_EXTENSION}
+#       -mi_block_10 LinearElasticity
+#       -mi_param_10_0 1e3
+#       -mi_param_10_1 0.4
+#       -atom_test 5
+#     )
 
-    add_test(
-      hertz_mfront_2d_axisymm_sphere
-      ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
-      contact_2d
-      -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/cyl_2d_4p.h5m
-      -pc_type lu
-      -ts_type beuler
-      -ts_max_time 1 -ts_dt 1 
-      -sdf_file ./sdf_files/sdf_hertz_2d_axisymm_plane.py
-      -use_mfront 1
-      -is_axisymmetric 1
-      -mi_lib_path_10 ${CMAKE_CURRENT_BINARY_DIR}/src/libBehaviour.${DEFAULT_LIB_EXTENSION}
-      -mi_block_10 LinearElasticity
-      -mi_param_10_0 1e3
-      -mi_param_10_1 0.4
-      -atom_test 4
-    )
+#     add_test(
+#       hertz_mfront_2d_axisymm_sphere
+#       ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
+#       contact_2d
+#       -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/cyl_2d_4p.h5m
+#       -pc_type lu
+#       -ts_type beuler
+#       -ts_max_time 1 -ts_dt 1 
+#       -sdf_file ./sdf_files/sdf_hertz_2d_axisymm_plane.py
+#       -use_mfront 1
+#       -is_axisymmetric 1
+#       -mi_lib_path_10 ${CMAKE_CURRENT_BINARY_DIR}/src/libBehaviour.${DEFAULT_LIB_EXTENSION}
+#       -mi_block_10 LinearElasticity
+#       -mi_param_10_0 1e3
+#       -mi_param_10_1 0.4
+#       -atom_test 4
+#     )
 
-    add_test(
-      hertz_mfront_3d
-      ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
-      contact_3d
-      -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/hertz_3d_4p.h5m
-      -pc_type lu
-      -ts_type beuler
-      -ts_max_time 1 -ts_dt 1
-      -sdf_file ./sdf_files/sdf_hertz_3d.py
-      -use_mfront 1
-      -mi_lib_path_10 ${CMAKE_CURRENT_BINARY_DIR}/src/libBehaviour.${DEFAULT_LIB_EXTENSION}
-      -mi_block_10 LinearElasticity
-      -mi_param_10_0 1e3
-      -mi_param_10_1 0.4
-      -atom_test 3
-    )
+#     add_test(
+#       hertz_mfront_3d
+#       ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
+#       contact_3d
+#       -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/hertz_3d_4p.h5m
+#       -pc_type lu
+#       -ts_type beuler
+#       -ts_max_time 1 -ts_dt 1
+#       -sdf_file ./sdf_files/sdf_hertz_3d.py
+#       -use_mfront 1
+#       -mi_lib_path_10 ${CMAKE_CURRENT_BINARY_DIR}/src/libBehaviour.${DEFAULT_LIB_EXTENSION}
+#       -mi_block_10 LinearElasticity
+#       -mi_param_10_0 1e3
+#       -mi_param_10_1 0.4
+#       -atom_test 3
+#     )
 
-    add_test(
-      wavy_mfront_half_space_2d
-      ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
-      contact_2d
-      -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/half_space_2d_4p.h5m
-      -pc_type lu
-      -ts_type beuler
-      -ts_max_time 1 -ts_dt 1
-      -sdf_file ./sdf_files/sdf_wavy_2d.py
-      -use_mfront 1
-      -is_axisymmetric 0
-      -mi_lib_path_10 ${CMAKE_CURRENT_BINARY_DIR}/src/libBehaviour.${DEFAULT_LIB_EXTENSION}
-      -mi_block_10 LinearElasticity     
-      -mi_param_10_0 1e3
-      -mi_param_10_1 0.4
-      -atom_test 6
-    )
+#     add_test(
+#       wavy_mfront_half_space_2d
+#       ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
+#       contact_2d
+#       -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/half_space_2d_4p.h5m
+#       -pc_type lu
+#       -ts_type beuler
+#       -ts_max_time 1 -ts_dt 1
+#       -sdf_file ./sdf_files/sdf_wavy_2d.py
+#       -use_mfront 1
+#       -is_axisymmetric 0
+#       -mi_lib_path_10 ${CMAKE_CURRENT_BINARY_DIR}/src/libBehaviour.${DEFAULT_LIB_EXTENSION}
+#       -mi_block_10 LinearElasticity     
+#       -mi_param_10_0 1e3
+#       -mi_param_10_1 0.4
+#       -atom_test 6
+#     )
     
-    add_test(
-      hertz_mfront_3d_schur
-      ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
-      contact_3d_schur
-      -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/hertz_3d_4p.h5m
-      -pc_type fieldsplit
-      -ts_type beuler
-      -ts_max_time 1 -ts_dt 1
-      -sdf_file ./sdf_files/sdf_hertz_3d.py
-      -use_mfront 1
-      -mi_lib_path_10 ${CMAKE_CURRENT_BINARY_DIR}/src/libBehaviour.${DEFAULT_LIB_EXTENSION}
-      -mi_block_10 LinearElasticity
-      -mi_param_10_0 1e3
-      -mi_param_10_1 0.4
-      -atom_test 3
-    )
+#     add_test(
+#       hertz_mfront_3d_schur
+#       ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
+#       contact_3d_schur
+#       -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/hertz_3d_4p.h5m
+#       -pc_type fieldsplit
+#       -ts_type beuler
+#       -ts_max_time 1 -ts_dt 1
+#       -sdf_file ./sdf_files/sdf_hertz_3d.py
+#       -use_mfront 1
+#       -mi_lib_path_10 ${CMAKE_CURRENT_BINARY_DIR}/src/libBehaviour.${DEFAULT_LIB_EXTENSION}
+#       -mi_block_10 LinearElasticity
+#       -mi_param_10_0 1e3
+#       -mi_param_10_1 0.4
+#       -atom_test 3
+#     )
 
 
-    add_test(
-      wavy_3d_mfront #hex
-      ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
-      contact_3d
-      -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/wavy_3d_4p.h5m
-      -base demkowicz
-      -pc_type lu
-      -ts_type beuler
-      -ts_max_time 1 -ts_dt 1
-      -sdf_file ./sdf_files/sdf_plane_3d.py
-      -use_mfront 1
-      -is_axisymmetric 0
-      -mi_lib_path_10 ${CMAKE_CURRENT_BINARY_DIR}/src/libBehaviour.${DEFAULT_LIB_EXTENSION}
-      -mi_block_10 LinearElasticity
-      -mi_param_10_0 1e3
-      -mi_param_10_1 0.4
-      -atom_test 7
-    )
+#     add_test(
+#       wavy_3d_mfront #hex
+#       ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
+#       contact_3d
+#       -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/wavy_3d_4p.h5m
+#       -base demkowicz
+#       -pc_type lu
+#       -ts_type beuler
+#       -ts_max_time 1 -ts_dt 1
+#       -sdf_file ./sdf_files/sdf_plane_3d.py
+#       -use_mfront 1
+#       -is_axisymmetric 0
+#       -mi_lib_path_10 ${CMAKE_CURRENT_BINARY_DIR}/src/libBehaviour.${DEFAULT_LIB_EXTENSION}
+#       -mi_block_10 LinearElasticity
+#       -mi_param_10_0 1e3
+#       -mi_param_10_1 0.4
+#       -atom_test 7
+#     )
 
-  endif(TFEL_DIR)
-endif()
+#   endif(TFEL_DIR)
+# endif()
