--- a/mofem/tutorials/vec-2/CMakeLists.txt
+++ b/mofem/tutorials/vec-2/CMakeLists.txt
@@ -63,14 +63,14 @@ add_test(
   ${CMAKE_CURRENT_BINARY_DIR}/nonlinear_elastic_2d -ts_max_steps 25
   -file_name ${CMAKE_CURRENT_SOURCE_DIR}/meshes/LShape_Rot_MPC_link.cub
   -order 2 -ts_max_time 1.0 -ts_dt 0.05 
-  -log_no_color -test 4 -pc_type lu)
+  -log_no_color -test 4 -pc_type lu -young_modulus 100 -poisson_ratio 0.3)
 
   add_test(
     test_nelastic_mpc_3_part
     ${MPI_RUN} ${MPI_RUN_FLAGS} -np 3
     ${CMAKE_CURRENT_BINARY_DIR}/nonlinear_elastic_2d -ts_max_steps 25
     -file_name ${CMAKE_CURRENT_SOURCE_DIR}/meshes/LShape_Rot_MPC_link_3_part.h5m -order 2 -ts_max_time 1.0 -ts_dt 0.05 
-    -log_no_color -test 4 -pc_type lu)
+    -log_no_color -test 4 -pc_type lu -young_modulus 100 -poisson_ratio 0.3)
   
   add_test(
   test_nelastic_mpc_master
@@ -78,7 +78,7 @@ add_test(
   ${CMAKE_CURRENT_BINARY_DIR}/nonlinear_elastic_2d -ts_max_steps 25
   -file_name ${CMAKE_CURRENT_SOURCE_DIR}/meshes/LShape_Rot_MPC_link_master.cub
   -order 2 -ts_max_time 1.0 -ts_dt 0.05 
-  -log_no_color -test 5 -pc_type lu)
+  -log_no_color -test 5 -pc_type lu -young_modulus 100 -poisson_ratio 0.3)
 
 
 add_test(
@@ -86,19 +86,19 @@ add_test(
   ${MPI_RUN} ${MPI_RUN_FLAGS} -np 1
   ${CMAKE_CURRENT_BINARY_DIR}/nonlinear_elastic_2d -ts_max_steps 25
   -file_name ${CMAKE_CURRENT_SOURCE_DIR}/meshes/LShape_Rot_MPC_link_master_swap.cub -order 2 -ts_max_time 1.0 -ts_dt 0.05
-  -log_no_color -test 6 -pc_type lu)
+  -log_no_color -test 6 -pc_type lu -young_modulus 100 -poisson_ratio 0.3)
 
 add_test(
   test_nelastic_mpc_link_Y
   ${MPI_RUN} ${MPI_RUN_FLAGS} -np 1
   ${CMAKE_CURRENT_BINARY_DIR}/nonlinear_elastic_2d -ts_max_steps 25
   -file_name ${CMAKE_CURRENT_SOURCE_DIR}/meshes/LShape_Rot_MPC_link_Y.cub -order 2 -ts_max_time 1.0 -ts_dt 0.05
-  -log_no_color -test 7 -pc_type lu)
+  -log_no_color -test 7 -pc_type lu -young_modulus 100 -poisson_ratio 0.3)
 
 add_test(
   test_nelastic_mpc_link_3D_repr
   ${MPI_RUN} ${MPI_RUN_FLAGS} -np 1
   ${CMAKE_CURRENT_BINARY_DIR}/nonlinear_elastic -ts_max_steps 25
   -file_name ${CMAKE_CURRENT_SOURCE_DIR}/meshes/beam3D_MPCs.cub -order 1 -ts_dt 0.1 -ts_max_time 1.0 
-  -pc_type lu -log_no_color -test 8 -pc_type lu)
+  -pc_type lu -log_no_color -test 8 -pc_type lu -young_modulus 100 -poisson_ratio 0.3)
 
