--- a/mofem/tutorials/scl-8/CMakeLists.txt
+++ b/mofem/tutorials/scl-8/CMakeLists.txt
@@ -26,3 +26,6 @@ tutorials_copy_and_install("*.md" "${permissions_execute}")
 
 tutorials_build_and_install(
   radiation ${CMAKE_CURRENT_SOURCE_DIR}/radiation.cpp)
+
+# Convert markdown files to Jupyter notebooks
+copy_and_convert_md_to_ipynb(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
