--- a/mofem/tutorials/adv-2/CMakeLists.txt
+++ b/mofem/tutorials/adv-2/CMakeLists.txt
@@ -32,9 +32,19 @@ tutorials_copy_and_install("meshes/*" "${permissions_execute}")
 tutorials_build_and_install(
   thermo_elastic_2d ${CMAKE_CURRENT_SOURCE_DIR}/thermo_elastic.cpp)
 set_target_properties(
-  thermo_elastic_2d PROPERTIES COMPILE_FLAGS "-DEXECUTABLE_DIMENSION=2")
+  thermo_elastic_2d PROPERTIES COMPILE_FLAGS "-DEXECUTABLE_DIMENSION=2 -DFINITE_DEFORMATION_FLAG=false -DHENCKY_SMALL_STRAIN")
 
 tutorials_build_and_install(
   thermo_elastic_3d ${CMAKE_CURRENT_SOURCE_DIR}/thermo_elastic.cpp)
 set_target_properties(
-  thermo_elastic_3d PROPERTIES COMPILE_FLAGS "-DEXECUTABLE_DIMENSION=3")
+  thermo_elastic_3d PROPERTIES COMPILE_FLAGS "-DEXECUTABLE_DIMENSION=3 -DFINITE_DEFORMATION_FLAG=false -DHENCKY_SMALL_STRAIN")
+
+  tutorials_build_and_install(
+  finite_thermo_elastic_2d ${CMAKE_CURRENT_SOURCE_DIR}/thermo_elastic.cpp)
+set_target_properties(
+  finite_thermo_elastic_2d PROPERTIES COMPILE_FLAGS "-DEXECUTABLE_DIMENSION=2 -FINITE_DEFORMATION_FLAG=true")
+
+tutorials_build_and_install(
+  finite_thermo_elastic_3d ${CMAKE_CURRENT_SOURCE_DIR}/thermo_elastic.cpp)
+set_target_properties(
+  finite_thermo_elastic_3d PROPERTIES COMPILE_FLAGS "-DEXECUTABLE_DIMENSION=3 -FINITE_DEFORMATION_FLAG=true")
