--- a/mofem/tutorials/scl-12/CMakeLists.txt
+++ b/mofem/tutorials/scl-12/CMakeLists.txt
@@ -1,5 +1,4 @@
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../scl-1/src)
 
 include_directories(
   ${UM_SOURCE_DIR}/tutorials/cor-2to5/src
@@ -35,21 +34,29 @@ tutorials_build_and_install(
   set_target_properties(
     electrostatics_2d PROPERTIES COMPILE_FLAGS "-DEXECUTABLE_DIMENSION=2")
 
+  add_custom_target(
+      tut_scl_12_copy_mesh_files_directory
+      ALL
+      COMMAND ${CMAKE_COMMAND} -E copy_directory 
+      ${CMAKE_CURRENT_SOURCE_DIR}/mesh_files ${CMAKE_CURRENT_BINARY_DIR}/mesh_files
+      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+      COMMENT "Copying mesh_files directory" VERBATIM)
+
 #################
 ##### TESTS #####
 #################
 
-# sigma=+-10.0 on the electrode; ep_air: 1,ep1: 2, ep2: 3;
-  add_test(electro_2d
-      ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
-      electrostatics_2d
-      -file_name ${CMAKE_CURRENT_SOURCE_DIR}/elec_2D_4p.h5m
-      -atom_test 1
-       )
+# sigma=+-10.0 on the electrode; ep_air:1, ep1: 2, ep2: 3;
+  add_test(
+    electro_2d
+    ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
+    electrostatics_2d
+    -file_name ${CMAKE_CURRENT_SOURCE_DIR}/mesh_files/elec_2D_4p.h5m
+    -atom_test 1)
 
-  add_test(electro_3d
-      ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
-      electrostatics_3d
-      -file_name ${CMAKE_CURRENT_SOURCE_DIR}/elec_3D_4p.h5m
-      -atom_test 1
-       )
+  add_test(
+    electro_3d
+    ${MPI_RUN} ${MPI_RUN_FLAGS} -np 4
+    electrostatics_3d
+    -file_name ${CMAKE_CURRENT_SOURCE_DIR}/mesh_files/elec_3D_4p.h5m
+    -atom_test 1)
