changes for cmake

--- a/mofem/tutorials/mix-5/CMakeLists.txt
+++ b/mofem/tutorials/mix-5/CMakeLists.txt
@@ -20,13 +20,13 @@ tutorials_copy_and_install("*.sh" "${permissions_execute}")
 tutorials_copy_and_install("*.geo" "${permissions_execute}")
 
 tutorials_build_and_install(
-  mixed_poisson ${CMAKE_CURRENT_SOURCE_DIR}/mixed_poisson.cpp)
+  mixed_nonlinear_poisson ${CMAKE_CURRENT_SOURCE_DIR}/mixed_poisson.cpp)
 
 tutorials_build_and_install(
-  standard_poisson ${CMAKE_CURRENT_SOURCE_DIR}/standard_poisson.cpp)
+  standard_nonlinear_poisson ${CMAKE_CURRENT_SOURCE_DIR}/standard_poisson.cpp)
 
 add_test(
   mixed_poisson
   ${MPI_RUN} ${MPI_RUN_FLAGS} -np 2
-  ${CMAKE_CURRENT_BINARY_DIR}/mixed_poisson
+  ${CMAKE_CURRENT_BINARY_DIR}/mixed_nonlinear_poisson
   -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh2d.h5m -log_no_color)
