--- a/mofem/tutorials/mix-3/CMakeLists.txt
+++ b/mofem/tutorials/mix-3/CMakeLists.txt
@@ -1,3 +1,5 @@
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
+
 set(permissions_default 
   OWNER_WRITE 
   OWNER_READ
@@ -21,9 +23,6 @@ tutorials_copy_and_install("*.geo" "${permissions_execute}")
 
 tutorials_build_and_install(
   mixed_nonlinear_poisson ${CMAKE_CURRENT_SOURCE_DIR}/mixed_nonlinear_poisson.cpp)
-
-tutorials_build_and_install(
-  standard_nonlinear_poisson ${CMAKE_CURRENT_SOURCE_DIR}/standard_poisson.cpp)
 
 add_test(
   mixed_nonlinear_poisson
