--- a/mofem/doc/CMakeLists.txt
+++ b/mofem/doc/CMakeLists.txt
@@ -84,12 +84,7 @@ if(DOXYGEN_FOUND)
   file(
     GLOB_RECURSE INSTLLED_DOC_MODULES
     FOLLOW_SYMLINKS
-    ${PROJECT_SOURCE_DIR}/users_modules/*AddDocumentation.cmake
-  )
-  file(
-    GLOB_RECURSE INSTLLED_DOC_MODULES
-    FOLLOW_SYMLINKS
-    ${PROJECT_SOURCE_DIR}/tutorials/*AddDocumentation.cmake
+    ${PROJECT_SOURCE_DIR}/*AddDocumentation.cmake
   )
   if(EXTERNAL_MODULE_SOURCE_DIRS)
     foreach(LOOP_DIR ${EXTERNAL_MODULE_SOURCE_DIRS})
